# mu-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  manifest.json  metadata.jsonl  package-lock.json  package.json  pyproject.toml  ruff.toml  run_all.sh
.github/: CODEOWNERS
.github/workflows/: deploy-leaderboard.yml  lint.yml  post-merge-score.yml  score-submission.yml  validate-submission.yml
leaderboard/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
leaderboard/public/: paper.md
leaderboard/scripts/: inject-data.js
leaderboard/src/: App.css  App.jsx  index.css
leaderboard/widgets/: mount.jsx  widget.css
results/: leaderboard.json  significance.json
results/azure/: scores.json
results/deepgram-nova3/: scores.json
results/google-chirp3/: scores.json
scoring/: llm.py  metrics.py  normalize.py  normalize_gold.py  requirements.txt  score.py  update_leaderboard.py  validate.py
scripts/: aggregate_variance.py  check_coverage.py  check_judge_drift.py  clip_audio.py  compare_transcripts.py  download_audio.py  fix_alignment.py  fix_manifest_durations.py  generate_hf_metadata.py  homophone_test_cases.json  invalidate_normalized_cache.py  invalidate_results_cache.py  latency_stats.py  preview_normalize_prompt.py  rebuild_audio_dataset.py  requirements.txt  significance_test.py  test_homophone_normalization.py  transcribe.py  verify_data.py
submissions/: SUBMITTING.md
tests/: conftest.py  test_metrics.py  test_validate.py
(+64663 files in other folders)
